使用Wrapper