@@ -3,7 +3,7 @@ plugins {
     id 'application'
     id 'org.javamodularity.moduleplugin' version '1.8.12'
     id 'org.openjfx.javafxplugin' version '0.0.13'
-    id 'org.beryx.jlink' version '2.26.0'
+    id "edu.sc.seis.launch4j" version "3.0.4"
 }
 
 group = 'com.github.wohaopa'
@@ -11,6 +11,14 @@ version = '0.3.0'
 
 sourceCompatibility = '17'
 targetCompatibility = '17'
+
+launch4j {
+    mainClassName = 'com.github.wohaopa.zplui.ZplApplication'
+    jvmOptions = [
+            "--module-path .\\lib\\ --add-modules javafx.controls,javafx.graphics,javafx.base,com.jfoenix,ZeroPointLaunch.Core --add-opens java.base/java.lang.reflect=com.jfoenix --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-exports javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix --add-exports javafx.controls/com.sun.javafx.scene.control=com.jfoenix"
+    ]
+    outfile = "ZPL.exe"
+}
 
 
 
@@ -49,28 +57,6 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
-test {
-    useJUnitPlatform()
-}
-
-jlink {
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-    launcher {
-        name = 'ZeroPointLauncher'
-        noConsole = false
-    }
-    forceMerge('log4j-api')
-    jpackage {
-        if (org.gradle.internal.os.OperatingSystem.current().windows) {
-            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
-            imageOptions += ['--win-console']
-        }
-    }
-}
-
-jlinkZip {
-    group = 'distribution'
-}
 
 tasks.register('runZPL', JavaExec) {
 
@@ -78,4 +64,21 @@ tasks.register('runZPL', JavaExec) {
     mainClass = 'boot.Main'
     jvmArgs += ["--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"]
 
+    systemProperty("zpl.rootDir", "D:\\DevProject\\JavaProject\\ZeroPointLaunch\\TestResources\\.GTNH")
+    systemProperty("zpl.url", "http://127.0.0.1/ZeroPointLauncher")
 }
+def allJars = (configurations.runtimeClasspath)
+        .findAll{it.isFile()}
+        .collect {  it.name }
+        .join(' ')
+
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.github.wohaopa.zplui.ZplApplication',
+                'Class-Path': allJars
+        )
+    }
+}
+
